SF-Perkin/force-app/main/default/objects/Case/fields/Abandoned_Case__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandoned Case</label>
    <type>Checkbox</type>
</CustomField>