SF-Perkin/force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>changed field name from Type of Case to Sub TYpe for LST service &amp; support</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adapter Support</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>AFT Advanced</fullName>
            </value>
            <value>
                <fullName>AFT Applications</fullName>
            </value>
            <value>
                <fullName>AFT Basic</fullName>
            </value>
            <value>
                <fullName>AFT Basic &amp; Advanced</fullName>
            </value>
            <value>
                <fullName>AFT User</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Assist</fullName>
            </value>
            <value>
                <fullName>Automated Invoices</fullName>
            </value>
            <value>
                <fullName>Automated Orders</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Billable Quotation</fullName>
            </value>
            <value>
                <fullName>Both Basic &amp; Advanced</fullName>
            </value>
            <value>
                <fullName>Caliper Site Training</fullName>
            </value>
            <value>
                <fullName>Chip/Reagents Quality</fullName>
            </value>
            <value>
                <fullName>Chips &amp; Reagent</fullName>
            </value>
            <value>
                <fullName>Close / Complete Call</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Consumables/Spares/Accy</fullName>
            </value>
            <value>
                <fullName>Courtesy Call</fullName>
            </value>
            <value>
                <fullName>Create Work Order</fullName>
            </value>
            <value>
                <fullName>Customer Master</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>Custom Order</fullName>
            </value>
            <value>
                <fullName>Deals</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Demo Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>