SF-Perkin/force-app/main/default/objects/Case/listViews/All_Cases_Open_Software_Support_Turku.listView-meta.xml
<ListView>
    <fullName>All_Cases_Open_Software_Support_Turku</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>TypeOfCase__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Case_Aging__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Dx_Software_Services</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Active,Waiting for Customer Response</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>DX Software Services - Akron,TRASH CASES</value>
    </filters>
    <filters>
        <field>TypeOfCase__c</field>
        <operation>notEqual</operation>
        <value>Change Request - Customer,Change Request - Internal,Change Request - Quality,Anomaly - License</value>
    </filters>
    <filters>
        <field>External_Email_Inbox__c</field>
        <operation>equals</operation>
        <value>specimengatesupportfi@perkinelmer.com,specimen.gate.supportfi@perkinelmer.com,specimengatesupportfi@revvity.com,specimen.gate.supportfi@revvity.com</value>
    </filters>
    <label>2 Software Services Turku OPEN Cases</label>
    <sharedTo>
        <group>ARQ_000793</group>
    </sharedTo>
</ListView>