SF-Perkin/force-app/main/default/objects/Case/listViews/ARQ_001467_Case.listView-meta.xml
<ListView>
    <fullName>ARQ_001467_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ARQ: NA/CA: NPT</label>
    <queue>ARQ_001543</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>