SF-Perkin/force-app/main/default/objects/Case/listViews/CAQ_AES_CC_US_Instrument_Sales_Unasgd_Case.listView-meta.xml
<ListView>
    <fullName>CAQ_AES_CC_US_Instrument_Sales_Unasgd_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Process,New</value>
    </filters>
    <label>CAQ: AES CC US Instrument Sales Unasgd</label>
    <queue>ARQ_000481</queue>
    <sharedTo>
        <allInternalUsers />
        <roleAndSubordinatesInternal>AES_ServiceMax_User</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>