SF-Perkin/force-app/main/default/objects/Case/listViews/CAQ_AES_CC_US_Sales_General_Unasgd_Case.listView-meta.xml
<ListView>
    <fullName>CAQ_AES_CC_US_Sales_General_Unasgd_Case</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Process,New</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>las.sales@perkinelmer.com,las.sales.aes@perkinelmer.com</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>CAQ: AES CC DACH General Unasgd</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>CAQ: AES CC US Returns Unasgd</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>CAQ: AES CC US Sales General Unasgd</value>
    </filters>
    <label>CAQ: AES CC US Sales General Unasgd</label>
    <sharedTo>
        <allInternalUsers />
        <group>ARQ_000719</group>
        <roleAndSubordinatesInternal>AES_ServiceMax_User</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>