SF-Perkin/force-app/main/default/objects/Case/listViews/Dx_Support_L2_France_Case.listView-meta.xml
<ListView>
    <fullName>Dx_Support_L2_France_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>External_Email_Inbox__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Merged</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>TRASH CASES</value>
    </filters>
    <label>ARQ: Case</label>
    <language>en_US</language>
    <queue>ARQ_000555</queue>
    <sharedTo>
        <group>ARQ_000798</group>
    </sharedTo>
</ListView>