SF-Perkin/force-app/main/default/objects/Case/listViews/X1_Software_Services_Turku_NEW_Cases.listView-meta.xml
<ListView>
    <fullName>X1_Software_Services_Turku_NEW_Cases</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Dx_Software_Services</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>DX Software Services - Akron,TRASH CASES,CC Trash Cases</value>
    </filters>
    <filters>
        <field>External_Email_Inbox__c</field>
        <operation>equals</operation>
        <value>specimengatesupportfi@perkinelmer.com,specimen.gate.supportfi@perkinelmer.com,specimengatesupportfi@revvity.com,specimen.gate.supportfi@revvity.com</value>
    </filters>
    <label>1 Software Services Turku NEW Cases</label>
</ListView>